# spk_scrp_pool

./: .gitignore  README.md  __main__.py  cron.txt  pyproject.toml
src/: .gitignore  __main__.py  app.py  create_table.py  database.py
src/app/: app.py
src/database/: create_table.py
src/spk_scrp/: __main__.py  app.py
src/spk_scrp/database/: create_table.py  database.py
