[tool.poetry]
name = "job-scrp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
config = "^0.5.1"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
